--- a/bom/templates/bom/dashboard.html
+++ b/bom/templates/bom/dashboard.html
@@ -40,7 +40,7 @@
                 {% endif %}
             </div>
             <div class="col s12 m2 text-center">
-                <button type="submit" class="waves-effect waves-green btn green lighten-1 input-field" name="action">Submit</button>
+                <button type="submit" class="waves-effect waves-green btn cyan darken-2 input-field" name="action">Submit</button>
             <a class="waves-effect waves-green btn-flat input-field btn-icon-round tooltipped" data-position="bottom" data-tooltip="Help with search" href="{% url 'bom:search-help' %}"><i class="material-icons">help</i></a>
                 {% if part_class or query %}
                     <a class="waves-effect waves-green btn-flat input-field btn-icon-round" onclick="clearSearchExpression()"><i class="material-icons">clear</i></a>
@@ -60,7 +60,7 @@
                             <label>Action</label>
                         </div>
                         <div class="col s12 m4" style="margin: 8px 0;">
-                            <button class="waves-effect waves-light btn green lighten-1" type="submit">Go</button>
+                            <button class="waves-effect waves-light btn cyan darken-2" type="submit">Go</button>
                             <span><a class="btn-flat waves-green" href="#" onclick="disableActionCheckboxColumn()">Hide</a></span>
                         </div>
                     </div>
