--- a/bom/templates/bom/upload-parts.html
+++ b/bom/templates/bom/upload-parts.html
@@ -32,7 +32,7 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col m10 s12 file-field input-field">
-                        <div class="green lighten-1 btn">
+                        <div class="cyan darken-2 btn">
                             <span>File</span>
                             {{ form.file }}
                         </div>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="col m2 s12 text-center input-field">
-                        <input class="green lighten-1 btn" type="submit" value="Upload"/>
+                        <input class="cyan darken-2 btn" type="submit" value="Upload"/>
                     </div>
                 </div>
             </form>
