--- a/bom/templates/bom/base-menu.html
+++ b/bom/templates/bom/base-menu.html
@@ -1,7 +1,8 @@
-<li><a title="IndaBOM | Feedback" href="https://forms.gle/4CUQuBcfBJ4eGXDW8" target="_blank">Feedback</a></li>
-{% if user.is_superuser and user.is_authenticated %}<li><a title="IndaBOM | Admin" href="/admin/" target="_blank">Admin</a></li>{% endif %}
-{% if user.is_authenticated %}<li><a title="IndaBOM | Log Out" href="{% url 'logout' %}">Logout [{{ user.username}}]</a></li>{% endif %}
+{% if user.is_superuser and user.is_authenticated %}
+<li><a title="IndaBOM | Admin" href="/admin/" target="_blank">Admin</a></li>{% endif %}
+{% if user.is_authenticated %}
+<li><a title="IndaBOM | Log Out" href="{% url "account_logout" %}">Logout</a></li>{% endif %}
 {% if not user.is_authenticated %}
-    <li><a title="IndaBOM | Log In" href="{% url 'login' %}">Login</a></li>
-    <li><a title="IndaBOM | Sign Up" href="{% url 'signup' %}">Sign Up</a></li>
+<li><a title="IndaBOM | Log In" href="{% url "account_login" %}">Login</a></li>
+<li><a title="IndaBOM | Sign Up" href="{% url "account_logout" %}">Sign Up</a></li>
 {% endif %}
