--- a/bom/templates/bom/bom-action-table.html
+++ b/bom/templates/bom/bom-action-table.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col s2 m2">
                 <div class="input-field">
-                    <button class="waves-effect waves-light btn green lighten-1" type="submit">Go</button>
+                    <button class="waves-effect waves-light btn cyan darken-2" type="submit">Go</button>
                 </div>
             </div>
         </div>
