--- a/bom/templates/bom/edit-part.html
+++ b/bom/templates/bom/edit-part.html
@@ -59,7 +59,7 @@
                             <a href="javascript:history.back()" class="waves-effect waves-light btn-flat grey-text lighten-1" style="margin-left: -16px;">Cancel</a>
                         </div>
                         <div class="col s6 right-align">
-                            <button class="waves-effect waves-light btn green lighten-1" type="submit" name="action">Save</button>
+                            <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="action">Save</button>
                         </div>
                     </div>
                 </form>
