--- a/bom/templates/bom/organization-create.html
+++ b/bom/templates/bom/organization-create.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="waves-effect waves-light btn green lighten-1" type="submit" name="action">Let's Go!</button>
+                        <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="action">Let's Go!</button>
                     </div>
                 </div>
             </form>
