--- a/bom/templates/bom/part-revision-manage-bom.html
+++ b/bom/templates/bom/part-revision-manage-bom.html
@@ -32,7 +32,7 @@
                     {{ add_subpart_form.do_not_load|materializecss:'m2 s12 input-field materialize-checkbox-padding' }}
                     {{ add_subpart_form.reference|materializecss:'m4 s12' }}
                     <div class="fieldWrapper">
-                        <button class="waves-effect waves-light btn green lighten-1" type="submit" name="action">add
+                        <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="action">add
                         </button>
                     </div>
                 </form>
@@ -49,7 +49,7 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col s9 file-field input-field">
-                        <div class="green lighten-1 btn">
+                        <div class="cyan darken-2 btn">
                             <span>File</span>
                             {{ upload_subparts_csv_form.file }}
                         </div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col s1 input-field">
-                        <input class="green lighten-1 btn" type="submit" value="Upload"/>
+                        <input class="cyan darken-2 btn" type="submit" value="Upload"/>
                     </div>
                 </div>
             </form>
