--- a/bom/templates/bom/settings.html
+++ b/bom/templates/bom/settings.html
@@ -41,7 +41,7 @@
                         <a type="button" class="waves-effect waves-light btn grey lighten-1" href="{% url 'bom:settings' tab_anchor=USER_TAB %}">Refresh</a>
                     </div>
                     <div class="col s6 right-align">
-                        <button class="waves-effect waves-light btn green lighten-1" type="submit" name="submit-edit-user">Save</button>
+                        <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="submit-edit-user">Save</button>
                     </div>
                 </div>
             </form>
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="col s2 m2">
                                     <div class="input-field">
-                                        <button class="waves-effect waves-light btn green lighten-1" type="submit">Go</button>
+                                        <button class="waves-effect waves-light btn cyan darken-2" type="submit">Go</button>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
                                 <a type="button" class="waves-effect waves-light btn grey lighten-1" href="{% url 'bom:settings' tab_anchor=INDABOM_TAB %}">Clear</a>
                             </div>
                             <div class="col s6 right-align">
-                                <button class="waves-effect waves-light btn green lighten-1" type="submit" name="submit-part-class-create">Create</button>
+                                <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="submit-part-class-create">Create</button>
                             </div>
                         </div>
                     </form>
@@ -143,7 +143,7 @@
                             a column with the header <b>'description'</b> or <b>'comment'</b>.</p>
                         <div class="row">
                             <div class="col s11 file-field input-field">
-                                <div class="green lighten-1 btn">
+                                <div class="cyan darken-2 btn">
                                     <span>File</span>
                                     {{ part_class_csv_form.file }}
                                 </div>
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                             <div class="col s1 input-field">
-                                <input class="green lighten-1 btn" type="submit" name="submit-part-class-upload" value="Upload"/>
+                                <input class="cyan darken-2 btn" type="submit" name="submit-part-class-upload" value="Upload"/>
                             </div>
                         </div>
                     </form>
@@ -169,7 +169,7 @@
                                 <a type="button" class="waves-effect waves-light btn grey lighten-1" href="{% url 'bom:settings' tab_anchor=INDABOM_TAB %}">Refresh</a>
                             </div>
                             <div class="col s6 right-align">
-                                <button class="waves-effect waves-light btn green lighten-1" type="submit" name="submit-number-item-len"
+                                <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="submit-number-item-len"
                                         onclick="return confirm('Are you sure you want to change the number of digits?')">Save
                                 </button>
                             </div>
@@ -223,7 +223,7 @@
                             <a class="waves-effect waves-light btn grey lighten-1" type="button" href="{% url 'bom:settings' tab_anchor=ORGANIZATION_TAB %}">Refresh</a>
                         </div>
                         <div class="col s6 right-align">
-                            <button class="waves-effect waves-light btn green lighten-1" type="submit" name="submit-edit-organization"
+                            <button class="waves-effect waves-light btn cyan darken-2" type="submit" name="submit-edit-organization"
                                     onclick="return confirm('Are you sure you want to change the organization information?')">Save
                             </button>
                         </div>
@@ -298,34 +298,12 @@
                             <a class="waves-effect waves-light btn grey lighten-1" type="button" href="{% url 'bom:settings' tab_anchor=ORGANIZATION_TAB %}">Clear</a>
                         </div>
                         <div class="col s6 right-align">
-                            <button class="waves-effect waves-light btn green lighten-1" type="submit" {% if organization.subscription == 'F' %}disabled{% endif %} name="submit-add-user">Add
+                            <button class="waves-effect waves-light btn cyan darken-2" type="submit" {% if organization.subscription == 'F' %}disabled{% endif %} name="submit-add-user">Add
                             </button>
                         </div>
                     </div>
                 </form>
 
-                <h3>Part File Storage with Google Drive <img title="Via Google Drive" style="height: 2.5rem; padding-bottom: 8px; vertical-align: middle;" src="{% static 'bom/img/google_drive_logo.svg' %}"></h3>
-                <p>Connect your Google account. Organization owners can enable file storage using Google Drive. {% if organization.owner == user %} Since you are the owner, you are able to enable
-                    file storage!{% else %}Contact your organization owner to enable.{% endif %}<p>
-                <p>When you connect, we will create a folder called <b>IndaBOM Part Files</b> in your root of Google drive (and can be moved anywhere in your drive). To add files to a part,
-                    navigate to the part in IndaBOM, and on the part's <b>Specifications</b> tab, click the <img title="Via Google Drive" style="width: 16px; vertical-align: middle;"
-                                                                                                                 src="{% static 'bom/img/google_drive_logo.svg' %}">&nbsp;Google Drive link.
-                    This will create a folder for your part in your root IndaBOM directory, or take you there if it already exists.<p>
-                <p>You'll be able to access the files directly through Google Drive, and through IndaBOM.</p>
-                <h4>Google Connections</h4>
-                <ul>
-                    {% if google_authentication %}
-                        <p>Logged in to Google as: {{ google_authentication.uid }}
-                        <form action="{% url 'social:disconnect' 'google-oauth2' %}" method="post">
-                            {% csrf_token %}
-                            <button class="waves-effect waves-light btn green lighten-1" type="submit">Disconnect</button>
-                        </form>
-                    {% else %}
-                        <a href="{% url "social:begin" "google-oauth2" %}">
-                            <img title="Google sign-in." src="{% static 'bom/img/google/web/1x/btn_google_signin_dark_normal_web.png' %}">
-                        </a>
-                    {% endif %}
-                </ul>
                 <h3>Automagic Sourcing via Mouser <img title="Sourcing via Mouser.com" style="height: 2.5rem; padding-bottom: 8px; vertical-align: middle;" src="{% static 'bom/img/mouser.png' %}">
                 </h3>
                 <p>No connection required. To enable sourcing via mouser, select which part classes you'd like enabled on the Settings INDABOM tab. Once enabled, sourcing information will appear on
