--- a/bom/templates/bom/upload-bom.html
+++ b/bom/templates/bom/upload-bom.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row">
                         <div class="col s9 file-field input-field">
-                            <div class="green lighten-1 btn">
+                            <div class="cyan darken-2 btn">
                                 <span>File</span>
                                 {{ bom_csv_form.file }}
                             </div>
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="col s1 input-field">
-                            <input class="green lighten-1 btn" type="submit" value="Upload"/>
+                            <input class="cyan darken-2 btn" type="submit" value="Upload"/>
                         </div>
                     </div>
                 </form>
